# ms-analytics

./: README.md  TODO.md  pyproject.toml
ms_analytics/: main.py  server.py
ms_analytics/config/constants/: app.py  environment.py
ms_analytics/config/docs/: metadata.py
ms_analytics/controllers/: __init__.py  accounting_controller.py  general_controller.py  inventory_controller.py  payroll_controller.py  sales_controller.py
ms_analytics/data/: data.json
ms_analytics/dtos/input/: __init__.py  general_chart_options_dto.py
ms_analytics/dtos/output/: __init__.py  accounting_chart_info_dto.py  accounting_dtos.py  general_chart_info_dto.py  inventory_dtos.py  payroll_dtos.py  sales_dtos.py
ms_analytics/helpers/: data.py  jwt.py
ms_analytics/middleware/: role_middleware.py
ms_analytics/middlewares/: __init__.py  role_middleware.py
ms_analytics/routers/: __init__.py  accounting_router.py  general_router.py  inventory_router.py  payroll_router.py  sales_router.py
src/: main.py  server.py
src/config/: __init__.py
src/config/docs/: metadata.py
src/controllers/: general_controller.py
src/dtos/input/: __init__.py  general_info_input_dto.py
src/routers/: general_router.py
