[tool.poetry]
name = "ms-analytics"
version = "0.1.0"
description = ""
authors = ["Santicm23 <Santicastrom@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "chess_web.main:main"
dev = "chess_web.main:main(True)"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
